2005-10-04  Graydon Hoare  <graydon@redhat.com>

	PR 1131.
	* tapsets.cxx
	(target_variable_flavour_calculating_visitor::visit_target_symbol)
	(var_expanding_copy_visitor::visit_target_symbol): 
	Require guru mode for writing to target vars.
	* testsuite/buildok/twenty.stp: Test writing to target vars.

2005-10-01  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (get_module_dwarf): Add "required" parameter, which
	throws an exception if debuginfo is not found.
	(focus_on_module_containing_global_address): Tolerate miss.
	(query_kernel_exists): New function to test for "kernel" module in
	dwfl_getmodules() result set.
	(dwarf_builder::build): Call it if appropriate.

2005-09-30  Graydon Hoare  <graydon@redhat.com>

	PR 1131.
	* tapsets.cxx (dwflpp::find_variable_and_frame_base)
	(dwflpp::translate_components)
	(dwflpp::resolve_unqualified_inner_typedie)
	(dwflpp::translate_final_fetch_or_store): New functions.
	(dwflpp::literal_stmt_for_local): Factor a bit.
	(variable_flavour_calculating_visitor::visit_target_symbol): 
	Don't fault on lvalue, just collect an extra char.
	(var_expanding_copy_visitor::target_symbol_setter_functioncalls): 
	New member.
	(var_expanding_copy_visitor::visit_assignment): New method.
	(var_expanding_copy_visitor::visit_target_symbol): Permit lvalues.

2005-09-30  Frank Ch. Eigler  <fche@elastic.org>

	* tapset/system_calls.stp (*_str): Simplified boolean test logic
	throughout, fixed some typos.

2005-09-28  Frank Ch. Eigler  <fche@elastic.org>

	PR 1182.
	* main.cxx (main): Support -D macro-setting option.
	* stap.1.in: Document it and related macros.
	* buildrun.cxx (compile_pass): Emit macro definitions.
	* translate.cxx (translate_pass): Guard limit macros with #ifdef.
	Eliminate MAXCONCURRENCY macro.
	* elaborate.h (systemtap_session): Add "macros" field.
	* parse.cxx (parse_if_statement): Clear "elseblock" if needed.

2005-09-27  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (query_cu_containing_global_address): Tolerate